# checkmate

./: .gitignore
checkmate/: Cargo.toml
checkmate-frontend/: vite.config.ts
checkmate-frontend/src/: common.scss  common.tsx  index.tsx  router.scss  router.tsx
checkmate/src/: errors.rs  game.rs  lib.rs  main.rs
checkmate/tests/: scholars_test.rs
checkmate_proto/: __init__.py  __main__.py
checkmate_proto/cli/: __init__.py  bases.py  cli.py  common.py  exception.py
checkmate_proto/game/: __init__.py  bases.py  factory.py  game.py
checkmate_proto/model/: __init__.py  bases.py  board.py  color.py
checkmate_proto/serialization/: __init__.py  bases.py  input.py
client/: package-lock.json  package.json  server.js
client/pub/: index.html
host/: Cargo.toml  client_test.py
host/src/: main.rs
host/src/agents/: heur_no_blunder.rs  heur_rand.rs  mod.rs
host/src/api/: cors.rs  responses.rs
host/src/api/endpoints/: game.rs  lobby.rs  mod.rs
host/src/api/state/: games.rs  mod.rs
host/src/chess/: agent.rs  format.rs  game.rs  mod.rs
host/src/chess/formats/: alg.rs  fen.rs  format.rs  mod.rs  pgn.rs  uci.rs
host/src/chess/model/: board.rs  board_builder.rs  color.rs  end.rs  errors.rs  mod.rs  move.rs  move_builder.rs  move_repr.rs  move_rules.rs  moves_builder.rs  piece.rs  piece_type.rs  position.rs  state.rs  state_builder.rs
host/src/host/: mod.rs
host/src/server/: catchers.rs  cors.rs  mod.rs  responses.rs
host/src/server/endpoints/: auth.rs  mod.rs  stage_factory.rs
prototyping/: requirements.txt
server/: Cargo.toml
(+113 files in other folders)
